update DB, DRF and docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,43 @@
+#services:
+#  db:
+#    image: postgres:13
+#    environment:
+#      POSTGRES_USER: myuser
+#      POSTGRES_PASSWORD: mypassword
+#      POSTGRES_DB: mydatabase
+#    ports:
+#      - "5432:5432"
+#    volumes:
+#      - postgres_data:/var/lib/postgresql/data/
+#volumes:
+#  postgres_data:
 version: '3.8'
+
 services:
+  web:
+    build: .
+    command: gunicorn --bind 0.0.0.0:8000 photo_api.wsgi
+    volumes:
+      - .:/app
+      - static_volume:/app/static
+      - ./media:/app/media
+    ports:
+      - "8000:8000"
+    env_file:
+      - .env
+    depends_on:
+      - db
+
   db:
     image: postgres:13
-    environment:
-      POSTGRES_USER: myuser
-      POSTGRES_PASSWORD: mypassword
-      POSTGRES_DB: mydatabase
-    ports:
-      - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data/
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+
 volumes:
   postgres_data:
+  static_volume:
+  media_volume:
