--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -15,7 +15,7 @@ version: '3.8'
 
 services:
   web:
-    build: .
+    build: ..
     command: gunicorn --bind 0.0.0.0:8000 photo_api.wsgi
     volumes:
       - .:/app
