--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,6 +11,7 @@ django = "^5.1.4"
 djangorestframework = "^3.15.2"
 psycopg2-binary = "^2.9.10"
 pillow = "^11.0.0"
+djangorestframework-simplejwt = "^5.5.0"
 
 
 [build-system]
